--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <div></div>
         <div></div>
     </div>
-    <div class="circulo"></div>
+    <div class="circulo">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 </html>
